# llmagent-loop-engineering

./: ARCHITECTURE_DIAGRAM.md  LICENSE  LOOP_COMBINATIONS.md  PROJECT_ARCHITECTURE.md  README.md  cli_context_commands.py  demo_loop_combinations.py  demo_loop_termination.py  pyproject.toml  quick_integration_test.py  test_context_features.py  test_integration.py  test_termination_conditions.py  test_tools_enhancement.py
docs/: CAPABILITIES.md  COLLABORATION_DEEPEN.md  COMPLETE.md  COMPLETION_REPORT.md  CONTEXT_MANAGEMENT_COMPLETE.md  CONTEXT_MANAGEMENT_DEEPEN.md  CONTEXT_QUICKSTART.md  DEPTH_ENHANCEMENT_PROGRESS.md  DEPTH_ENHANCEMENT_ROADMAP.md  DUAL_FRAMEWORK.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_COMPLETE.md  LLM_AGENT_ANALYSIS.md  LLM_AGENT_FRAMEWORK.md  LLM_AGENT_GUIDE.md  LLM_CALL_DEEPEN.md  LOOP_TERMINATION.md  MEMORY_SYSTEM_DEEPEN.md  PROJECT_STATUS.md  QUICKSTART_CN.md  QUICKSTART_LLM_AGENT.md  RELEASE_NOTES.md  RELEASE_PyPI.md  SOLUTION_C_SUMMARY.md  STRUCTURE.md  TOOL_SYSTEM_DEEPEN.md
examples/: quick_start_with_context.py
llm_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
llmagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/llm_agent/: __init__.py
src/llm_agent/agents/: __init__.py  base.py  context_managed.py  planner.py  reflector.py
src/llm_agent/api/: __init__.py  app.py  auth.py  context_endpoints.py  deps.py  middleware.py  session.py
src/llm_agent/api/routers/: __init__.py  agent.py  agents.py  health.py  team.py
src/llm_agent/cli/: __init__.py  main.py
src/llm_agent/collaboration/: __init__.py  negotiation.py  protocol.py  team.py
src/llm_agent/config/: __init__.py  defaults.yaml  settings.py
src/llm_agent/context/: __init__.py  compressor.py  manager.py  optimizer.py  quality.py  retainer.py
src/llm_agent/llm/: __init__.py  adapters.py  client.py  context_managed_client.py  prompts.py
src/llm_agent/memory/: __init__.py  memory.py  vector_store.py
src/llm_agent/schemas/: __init__.py  agent.py  common.py  team.py
src/llm_agent/tools/: __init__.py  enhanced_registry.py  registry.py  tool_cache.py  tool_chain.py
tests/: test_context_management.py
tests/test_api/: conftest.py  test_agent_endpoints.py  test_auth.py  test_health.py  test_team_endpoints.py
